--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,37 @@
-
+:root 
+{
+background-color: rgb(255, 79, 253);
+color: white
+}
+ .title
+{
+  color: black;
+  font-size: 80pt;
+  text-decoration: underline;
+  text-align: center;
+}
+ul
+{
+    text-align: center;
+}
+  li
+{
+    display: inline;
+    margin-left: 5vw;
+    margin-right: 5vw;
+}
+  img
+  {
+    margin: auto;
+    display: block;
+  } 
+section :hover
+{
+    background-color: rgb(255, 255, 48);
+}
+.footnote
+  {
+    font-style: italic;
+    text-align: center;
+    margin-top: 100px;
+}
